--- a/configs/ipq60xx.config
+++ b/configs/ipq60xx.config
@@ -225,3 +225,6 @@ CONFIG_PACKAGE_libopenssl-legacy=y
 CONFIG_PACKAGE_ucode-mod-nl80211=y
 CONFIG_PACKAGE_ucode-mod-rtnl=y
 CONFIG_PACKAGE_ucode-mod-uloop=y
+
+#增加组件
+CONFIG_PACKAGE_kmod-wireguard=y
